first changes from netbeans on project, add support of WikiMeta requests

--- a/ZeOntologyNewsExtractor/nbproject/project.properties
+++ b/ZeOntologyNewsExtractor/nbproject/project.properties
@@ -29,7 +29,6 @@ endorsed.classpath=\
 excludes=
 file.reference.arq-2.8.8.jar=lib/arq-2.8.8.jar
 file.reference.corese-3.0.5.jar=lib/corese-3.0.5.jar
-file.reference.guava-10.0.1.jar=lib/guava-10.0.1.jar
 file.reference.iri.jar=lib/iri.jar
 file.reference.j-calais-0.3.jar=lib/j-calais-0.3.jar
 file.reference.jackson-all-1.9.2.jar=lib/jackson-all-1.9.2.jar
@@ -37,6 +36,7 @@ file.reference.jdom-1.1.2-javadoc.jar=lib/jdom-1.1.2-javadoc.jar
 file.reference.jdom-1.1.2.jar=lib/jdom-1.1.2.jar
 file.reference.jena-2.6.4-javadoc.jar=lib/jena-2.6.4-javadoc.jar
 file.reference.jena-2.6.4.jar=lib/jena-2.6.4.jar
+file.reference.json_simple-1.1.jar=lib/json_simple-1.1.jar
 file.reference.rome-0.9.jar=lib/rome-0.9.jar
 file.reference.slf4j-api-1.6.4-sources.jar=lib/slf4j-api-1.6.4-sources.jar
 file.reference.slf4j-api-1.6.4.jar=lib/slf4j-api-1.6.4.jar
@@ -53,7 +53,6 @@ javac.classpath=\
     ${file.reference.jena-2.6.4-javadoc.jar}:\
     ${file.reference.jena-2.6.4.jar}:\
     ${file.reference.j-calais-0.3.jar}:\
-    ${file.reference.guava-10.0.1.jar}:\
     ${file.reference.jackson-all-1.9.2.jar}:\
     ${file.reference.slf4j-api-1.6.4-sources.jar}:\
     ${file.reference.slf4j-api-1.6.4.jar}:\
@@ -64,7 +63,8 @@ javac.classpath=\
     ${file.reference.tdb-0.8.10.jar}:\
     ${file.reference.arq-2.8.8.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.corese-3.0.5.jar}
+    ${file.reference.corese-3.0.5.jar}:\
+    ${file.reference.json_simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
