cleaning code for publication, add javadoc and work on tests

--- a/ZeOntologyNewsExtractor/nbproject/project.properties
+++ b/ZeOntologyNewsExtractor/nbproject/project.properties
@@ -74,7 +74,8 @@ javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
