--- a/ZeOntologyNewsExtractorUserRunner/Gemfile
+++ b/ZeOntologyNewsExtractorUserRunner/Gemfile
@@ -7,12 +7,19 @@ gem 'rails', '3.2.1'
 
 gem 'sqlite3'
 
-
+gem "mysql2"
 
 # RDF
 gem 'rdf'
 gem 'backports'
 gem 'rdf-raptor'
+
+
+# RDF-4Store
+gem "rest-client", "~> 1.6.7"
+gem "nokogiri", "~> 1.5.0"
+gem "ppe-4store-ruby", "~> 0.0.3"
+
 
 # Gems used only for assets and not required
 # in production environments by default.
