work on ZONE, add date gesture and export to 4store bdd

--- a/ZeOntologyNewsExtractor/nbproject/project.properties
+++ b/ZeOntologyNewsExtractor/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
 excludes=
 file.reference.arq-2.8.8.jar=lib/arq-2.8.8.jar
 file.reference.corese-3.0.5.jar=lib/corese-3.0.5.jar
+file.reference.guava-11.0.1.jar=lib/guava-11.0.1.jar
 file.reference.iri.jar=lib/iri.jar
 file.reference.j-calais-0.3.jar=lib/j-calais-0.3.jar
 file.reference.jackson-all-1.9.2.jar=lib/jackson-all-1.9.2.jar
@@ -64,7 +65,8 @@ javac.classpath=\
     ${file.reference.arq-2.8.8.jar}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.corese-3.0.5.jar}:\
-    ${file.reference.json_simple-1.1.jar}
+    ${file.reference.json_simple-1.1.jar}:\
+    ${file.reference.guava-11.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
