--- a/ZeOntologyNewsExtractorUserRunner/Gemfile
+++ b/ZeOntologyNewsExtractorUserRunner/Gemfile
@@ -8,9 +8,9 @@ gem "prototype-rails", "~> 3.2.1"
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
+#gem 'sqlite3'
 
-gem "mysql2"
+gem "mysql"
 
 # RDF
 gem 'rdf'
