--- a/ZeOntologyNewsExtractorUserRunner/config/database.yml
+++ b/ZeOntologyNewsExtractorUserRunner/config/database.yml
@@ -4,7 +4,7 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql2
+  adapter: mysql
   encoding: utf8
   database: ZONE
   pool: 10
@@ -22,7 +22,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: mysql
   encoding: utf8
   database: ZONE
   pool: 10
