--- a/ZeOntologyNewsExtractorUserRunner/.project
+++ b/ZeOntologyNewsExtractorUserRunner/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ZONEUR</name>
+	<name>ZeOntologyNewsExtractorUserRunner</name>
 	<comment></comment>
 	<projects>
 	</projects>
