--- a/ZeOntologyNewsExtractorUserRunner/Gemfile
+++ b/ZeOntologyNewsExtractorUserRunner/Gemfile
@@ -1,26 +1,11 @@
 source 'https://rubygems.org'
 
-gem 'rails', '3.2.1'
-
-
-gem "prototype-rails", "~> 3.2.1"
+gem 'rails', '3.2.8'
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-#gem 'sqlite3'
-
-gem "mysql"
-
-# RDF
-gem 'rdf'
-gem 'backports'
-gem 'rdf-raptor'
-
-
-# RDF-4Store
-gem "rest-client", "~> 1.6.7"
-gem "nokogiri", "~> 1.5.0"
+gem 'sqlite3'
 
 
 # Gems used only for assets and not required
@@ -30,23 +15,28 @@ group :assets do
   gem 'coffee-rails', '~> 3.2.1'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-  # gem 'therubyracer'
+   gem 'therubyracer', :platforms => :ruby
 
   gem 'uglifier', '>= 1.0.3'
 end
 
 gem 'jquery-rails'
+
+gem "ppe-4store-ruby", "~> 0.0.3"
+
+
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
 # To use Jbuilder templates for JSON
 # gem 'jbuilder'
 
-# Use unicorn as the web server
+# Use unicorn as the app server
 # gem 'unicorn'
 
 # Deploy with Capistrano
 # gem 'capistrano'
 
 # To use debugger
-# gem 'ruby-debug19', :require => 'ruby-debug'
+# gem 'debugger'
+#gem "thin"
