rename the app witch only download RSS feeds to ZONE-RSSreadeer

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /ZONE-plugin-ExtractArticlesContent/target/
 /ZONE-plugin-OpenCalais/target/
 /ZONE-plugin-WikiMeta/target/
+/ZONE-RSSreader/target/
