--- a/ZONE-RSSreader/pom.xml
+++ b/ZONE-RSSreader/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>zone</groupId>
-    <artifactId>ZONE-extractor</artifactId>
+    <artifactId>ZONE-RSSreader</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>ZONE-extractor</name>
+    <name>ZONE-RSSreader</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -20,7 +20,7 @@
                     <configuration>
                         <archive>
                           <manifest>
-                            <mainClass>org.zoneproject.extractor.App</mainClass>
+                            <mainClass>org.zoneproject.rssreader.App</mainClass>
                           </manifest>
                         </archive>
                         <descriptorRefs>
@@ -39,10 +39,7 @@
                   </execution>  
                  </executions>  
                    <configuration>  
-                    <mainClass>org.zoneproject.extractor.App</mainClass>
-                    <arguments>
-                        <argument>argument1</argument>
-                    </arguments>
+                    <mainClass>org.zoneproject.rssreader.App</mainClass>
                    </configuration>  
                 </plugin>  
         </plugins>
