move extractor in sub directory in order to have a parent project in maven in order to build the extractor project on one step

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /ZONE-plugin-OpenCalais/target/
 /ZONE-plugin-WikiMeta/target/
 /ZONE-RSSreader/target/
+/ZONE-extractor/ZONE-RSSreader/target/
+/ZONE-extractor/ZONE-utils/target/
