--- a/ZONE-extractor/ZONE-RSSreader/pom.xml
+++ b/ZONE-extractor/ZONE-RSSreader/pom.xml
@@ -1,66 +1,57 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>ZONE-RSSreader</artifactId>
 
-    <groupId>zone</groupId>
-    <artifactId>ZONE-RSSreader</artifactId>
+  <name>ZONE-RSSreader</name>
+  <parent>
+    <groupId>org.zoneproject.extractor</groupId>
+    <artifactId>ZONE-extractor</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>ZONE-RSSreader</name>
-    <url>http://maven.apache.org</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                    <configuration>
-                        <archive>
-                          <manifest>
-                            <mainClass>org.zoneproject.rssreader.App</mainClass>
-                          </manifest>
-                        </archive>
-                        <descriptorRefs>
-                            <descriptorRef>jar-with-dependencies</descriptorRef>
-                        </descriptorRefs>
-                    </configuration>
-            </plugin>
-                <plugin>  
-                 <groupId>org.codehaus.mojo</groupId>  
-                 <artifactId>exec-maven-plugin</artifactId>  
-                 <executions>  
-                  <execution>  
-                   <goals>  
-                    <goal>java</goal>  
-                   </goals>  
-                  </execution>  
-                 </executions>  
-                   <configuration>  
-                    <mainClass>org.zoneproject.rssreader.App</mainClass>
-                   </configuration>  
-                </plugin>  
-        </plugins>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources/</directory>
-            </testResource>
-        </testResources>
-    </build>
-    <dependencies>
+  </parent>
+    
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.zoneproject.rssreader.App</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+      <plugin>  
+        <groupId>org.codehaus.mojo</groupId>  
+        <artifactId>exec-maven-plugin</artifactId>  
+        <executions>  
+          <execution>  
+            <goals>  
+              <goal>java</goal>  
+            </goals>  
+          </execution>  
+        </executions>  
+        <configuration>  
+          <mainClass>org.zoneproject.rssreader.App</mainClass>
+        </configuration>  
+      </plugin>  
+    </plugins>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources/</directory>
+      </testResource>
+    </testResources>
+  </build>
+  <dependencies>
     <dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.8.1</version>
-    <scope>test</scope>
-    </dependency>
-    <dependency>
-    <groupId>zone</groupId>
-    <artifactId>ZONE-utils</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <scope>compile</scope>
-    </dependency>
-    </dependencies>
+      <groupId>org.zoneproject.extractor</groupId>
+      <artifactId>ZONE-utils</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+   </dependency>
+  </dependencies>
 </project>
