some clean on project

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /ZONE-extractor/ZONE-plugin-WikiMeta/target/
 /ZONE-extractor/ZONE-plugin-OpenCalais/target/
 /ZONE-extractor/ZONE-extractor-start/target/
+/ZONE-extractor/ZONE-plugin-INSEEGeo/target/
+/ZONE-extractor/log/
