fix bug with config gile

--- a/ZONE-extractor/pom.xml
+++ b/ZONE-extractor/pom.xml
@@ -70,6 +70,11 @@
         <directory>src/test/resources/</directory>
       </testResource>
     </testResources>
+    <resources>
+      <resource>
+        <directory>config/</directory>
+      </resource>
+    </resources>
   </build>  
   
   
@@ -80,6 +85,12 @@
       <version>4.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+    </dependency>
+
   </dependencies>
 
   <profiles>
