--- a/ZONE-extractor/ZONE-utils/pom.xml
+++ b/ZONE-extractor/ZONE-utils/pom.xml
@@ -25,7 +25,7 @@
     </plugins>
     <resources>
       <resource>
-        <directory>src/resources/</directory>
+        <directory>${basedir}/../config/</directory>
       </resource>
     </resources>
   </build>
@@ -67,11 +67,6 @@
       <groupId>virtjdbc3</groupId>
       <artifactId>virtjdbc3</artifactId>
       <version>1.6</version>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
     </dependency>
   </dependencies>
 
