--- a/ZONE-extractor/ZONE-extractor-start/pom.xml
+++ b/ZONE-extractor/ZONE-extractor-start/pom.xml
@@ -36,5 +36,11 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.zoneproject.extractor</groupId>
+      <artifactId>ZONE-plugin-INSEEGeo</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
