--- a/ZONE-extractor/ZONE-plugin-WikiMeta/pom.xml
+++ b/ZONE-extractor/ZONE-plugin-WikiMeta/pom.xml
@@ -22,6 +22,21 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+     <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>org.zoneproject.extractor.plugin.wikimeta.App</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
     <testResources>
       <testResource>
