--- a/ZONE-extractor/ZONE-RSSreader/pom.xml
+++ b/ZONE-extractor/ZONE-RSSreader/pom.xml
@@ -53,5 +53,11 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
    </dependency>
+   <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.7.1</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 </project>
