--- a/ZONE-extractor/ZONE-utils/pom.xml
+++ b/ZONE-extractor/ZONE-utils/pom.xml
@@ -68,6 +68,12 @@
       <artifactId>virtjdbc3</artifactId>
       <version>1.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.7.1</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
 </project>
