--- a/ZONE-extractor/pom.xml
+++ b/ZONE-extractor/pom.xml
@@ -134,7 +134,12 @@
       <artifactId>log4j</artifactId>
       <version>1.2.16</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.7.1</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
   <profiles>
