--- a/ZONE-extractor/ZONE-extractor-start/pom.xml
+++ b/ZONE-extractor/ZONE-extractor-start/pom.xml
@@ -11,6 +11,20 @@
   <artifactId>ZONE-extractor-start</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>ZONE-extractor-start</name>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>  
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.2.1</version>
+          <configuration>
+            <mainClass>org.zoneproject.extractor.App</mainClass>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
   <dependencies>
     <dependency>
       <groupId>org.zoneproject.extractor</groupId>
