--- a/ZONE-extractor/ZONE-plugin-categorization_SVM/pom.xml
+++ b/ZONE-extractor/ZONE-plugin-categorization_SVM/pom.xml
@@ -61,6 +61,11 @@
   
   <dependencies>
     <dependency>
+      <groupId>edu.stanford.nlp</groupId>
+      <artifactId>stanford-corenlp</artifactId>
+      <version>1.3.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-mapper-asl</artifactId>
       <version>1.6.1</version>
@@ -72,5 +77,18 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>jnisvmlight</groupId>
+      <artifactId>jnisvmlight</artifactId>
+      <version>1.0</version>
+    </dependency>
   </dependencies>
+  
+
+  <repositories>
+    <repository>
+      <id>local-repo</id>
+      <url>file://${basedir}/local-repo</url>
+    </repository>
+  </repositories>
 </project>
