[#41673069] add ajax for each item loading

--- a/ZONE-watcher/Gemfile
+++ b/ZONE-watcher/Gemfile
@@ -26,3 +26,6 @@ gem 'jquery-rails'
 #gem "linkeddata"
 gem "rest-client"
 gem "sparql-client", "~> 0.3.1"
+
+#for variables parsing other javascript
+gem "gon"
