--- a/ZONE-extractor/ZONE-plugin-categorization_SVM/pom.xml
+++ b/ZONE-extractor/ZONE-plugin-categorization_SVM/pom.xml
@@ -61,9 +61,19 @@
   
   <dependencies>
     <dependency>
-      <groupId>edu.stanford.nlp</groupId>
+      <groupId>xom</groupId>
+      <artifactId>xom</artifactId>
+      <version>1.2.5</version>
+    </dependency>
+    <dependency>
+      <groupId>stanford-corenlp</groupId>
       <artifactId>stanford-corenlp</artifactId>
-      <version>1.3.3</version>
+      <version>1.3.4</version>
+    </dependency>
+    <dependency>
+      <groupId>stanford-corenlp-models</groupId>
+      <artifactId>stanford-corenlp-models</artifactId>
+      <version>1.3.4</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
