--- a/ZONE-extractor/pom.xml
+++ b/ZONE-extractor/pom.xml
@@ -43,7 +43,9 @@
     <module>ZONE-plugin-OpenCalais</module>
     <module>ZONE-extractor-start</module>
     <module>ZONE-plugin-INSEEGeo</module>
+    <!-- Enable SVM here!
     <module>ZONE-plugin-categorization_SVM</module>
+    -->
   </modules>
   
   <properties>
