[#46178425] travail préliminaire sur le moteur de recherche

--- a/ZONE-watcher/public/assets/manifest.yml
+++ b/ZONE-watcher/public/assets/manifest.yml
@@ -2,5 +2,8 @@
 auth-icons.png: auth-icons-ab5120504a62de77bbdd5d11560f360f.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 sign-in-with-twitter.png: sign-in-with-twitter-c06fbacf81eb9dd46bff6180f3233e35.png
+twitter-bird-light-bgs.png: twitter-bird-light-bgs-dd4e357d8daaa9000b7e662f31ce1116.png
+twitter.png: twitter-3c399e6384023834ce1aaeb89ea05c44.png
+twitter2.png: twitter2-f577ec319e54b78c9c3a2532c1ffc452.png
 application.js: application-fe872ff963c506bffe84113b0f98f1ce.js
 application.css: application-29a4fbbdad8085f1b0f53f0109d47f8f.css
