--- a/ZONE-watcher/Gemfile
+++ b/ZONE-watcher/Gemfile
@@ -25,6 +25,7 @@ gem 'jquery-rails'
 #gem "linkeddata"
 gem "rest-client"
 gem "sparql-client", "~> 0.3.1"
+gem "rdf-virtuoso", "~> 0.1.1"
 
 #for variables parsing other javascript
 gem "gon"
