--- a/ZONE-extractor/ZONE-plugin-categorization_SVM/pom.xml
+++ b/ZONE-extractor/ZONE-plugin-categorization_SVM/pom.xml
@@ -11,7 +11,15 @@
   <artifactId>ZONE-plugin-categorization_SVM</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>ZONE-plugin-categorization_SVM</name>
-  
+
+  <licenses>
+    <license>
+      <name>MIT licence</name>
+      <url>http://en.wikipedia.org/wiki/MIT_License</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
   <build>
     <plugins>
       <plugin>
@@ -81,6 +89,23 @@
         </configuration>
       </plugin>
 
+
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>1.3</version>
+        <configuration>
+          <verbose>false</verbose>
+          <licenseName>mit</licenseName>
+          <clearAfterOperation>1</clearAfterOperation>
+          <clearAfterOperation>true</clearAfterOperation>
+          <roots>
+            <root>src/main/java</root>
+            <root>src/test</root>
+          </roots>
+        </configuration>
+      </plugin>
       
     </plugins>
     <testResources>
