--- a/ZONE-extractor/pom.xml
+++ b/ZONE-extractor/pom.xml
@@ -13,8 +13,8 @@
   
   <licenses>
     <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <name>GNU AFFERO GENERAL PUBLIC LICENSE Version 3</name>
+      <url>http://www.gnu.org/licenses/agpl-3.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -91,7 +91,7 @@
         <version>1.3</version>
         <configuration>
           <verbose>false</verbose>
-          <licenseName>apache_v2</licenseName>
+          <licenseName>agpl_v3</licenseName>
           <clearAfterOperation>true</clearAfterOperation>
           <roots>
             <root>src/main/java</root>
