--- a/ZONE-watcher/Gemfile
+++ b/ZONE-watcher/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'rails', '3.2.8'
+gem 'rails', '3.2.12'
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
@@ -37,3 +37,7 @@ gem 'omniauth'
 gem 'omniauth-twitter'
 gem 'omniauth-github'
 gem 'omniauth-google-oauth2'
+
+#opml files import
+gem 'opml_saw', github: 'feedbin/opml_saw'
+gem "paperclip", "~> 3.4.1"
