[#46691611] add the maven dependance for svm in the extractor plugin

--- a/ZONE-extractor/ZONE-extractor-start/pom.xml
+++ b/ZONE-extractor/ZONE-extractor-start/pom.xml
@@ -56,5 +56,11 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.zoneproject.extractor</groupId>
+      <artifactId>ZONE-plugin-categorization_SVM</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
