--- a/ZONE-extractor/pom.xml
+++ b/ZONE-extractor/pom.xml
@@ -51,6 +51,13 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <repositories>
+    <repository>
+      <id>local-repo</id>
+      <url>file://${basedir}/local-repo</url>
+    </repository>
+  </repositories>
   <build>
     <pluginManagement>
       <plugins>
