[#44299193 #46178425] work on hashtags filtering and search form (serverside)

--- a/ZONE-extractor/ZONE-TwitterReader/pom.xml
+++ b/ZONE-extractor/ZONE-TwitterReader/pom.xml
@@ -64,5 +64,10 @@
       <artifactId>twitter4j-core</artifactId>
       <version>[3.0,)</version>
     </dependency>
+    <dependency>
+      <groupId>com.twitter</groupId>
+      <artifactId>twitter-text</artifactId>
+      <version>1.6.1</version>
+    </dependency>
   </dependencies>
 </project>
