--- a/ZONE-extractor/ZONE-extractor-start/pom.xml
+++ b/ZONE-extractor/ZONE-extractor-start/pom.xml
@@ -46,6 +46,12 @@
     </dependency>
     <dependency>
       <groupId>org.zoneproject.extractor</groupId>
+      <artifactId>ZONE-TwitterReader</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.zoneproject.extractor</groupId>
       <artifactId>ZONE-plugin-ExtractArticlesContent</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
