[#41459533] work on install doc

--- a/ZONE-extractor/config/zone.properties
+++ b/ZONE-extractor/config/zone.properties
@@ -1,13 +1,17 @@
-#Anotaters keys
-wikiMeta-key = descl
-openCalais-key = p8zhr726g3mzj9g7fs7hg7cj
+#For wikiMeta key: http://my.wikimeta.com/amember/signup/index/c/
+wikiMeta-key = YourWikiMetaKey
+
+#For OpenCalais key: http://www.opencalais.com/APIkey
+openCalais-key = YourOpenCalaisKey
 
 #FourStore database
 FourStore-server = http://localhost:8080
 Virtuoso-server-uri = jdbc:virtuoso://localhost:1111
+
+#virtuoso password and login
 Virtuoso-server-user = dba
 Virtuoso-server-pass = dba
 
-#RSS items
-rssFeeds = http://www.tv5.org/TV5Site/rss/actualites.php?rub=3,http://www.tv5.org/TV5Site/rss/actualites.php?rub=2,http://www.tv5.org/TV5Site/rss/actualites.php?rub=1,http://www.tv5.org/TV5Site/rss/actualites.php?rub=7,http://www.tv5.org/TV5Site/rss/actualites.php?rub=9,http://www.tv5.org/TV5Site/rss/actualites.php?rub=12,http://www.tv5.org/TV5Site/football/rss.php,http://www.leparisien.fr/actualites-a-la-une.rss.xml,http://www.leparisien.fr/une/rss.xml,http://www.leparisien.fr/actualite-people-medias/rss.xml,http://fr.news.yahoo.com/rss/sports,http://fr.news.yahoo.com/monde/?format=rss,http://fr.news.yahoo.com/france/?format=rss,http://api.twitter.com/1/statuses/user_timeline.rss?screen_name=afpfr
-#,http://www.lequipe.fr/rss/actu_rss.xml,http://www.lequipe.fr/rss/actu_rss_Football.xml
+#twitter OAuth 
+Twitter-OAuth-customer = OAuthCustomer
+Twitter-OAuth-customerKey = OAuthCustomerKey
