--- a/ZONE-watcher/Gemfile
+++ b/ZONE-watcher/Gemfile
@@ -40,7 +40,7 @@ gem 'omniauth-github'
 gem 'omniauth-google-oauth2'
 
 #opml files import
-gem 'opml_saw', github: 'feedbin/opml_saw'
+gem 'opml_saw', :git => "git://github.com/feedbin/opml_saw.git", :branch => "master"
 gem "paperclip", "~> 3.4.1"
 
 gem "tag_it", "~> 0.0.1"
