More checkpoint for the advanced search
Extended table doesn't mess the all modal
Extended keyword without blank are now well cut
Delete button are now red
The modal is now clean when she fade

Now fully compatible with firefox

--- a/ZONE-watcher/config/config.yml.example
+++ b/ZONE-watcher/config/config.yml.example
@@ -6,11 +6,11 @@ zopimId: "1AfdKtAnFnyhyiv9K09kidoNONtAmgvV"
 
 devise:
   twitter:
-    auth: ""
-    pass: ""
+    auth: "v"
+    pass: "v"
   github:
-    auth: ""
-    pass: ""
+    auth: "v"
+    pass: "v"
   google:
-    auth: ""
-    pass: ""
+    auth: "v"
+    pass: "v"
