--- a/ZONE-watcher/Gemfile
+++ b/ZONE-watcher/Gemfile
@@ -22,7 +22,7 @@ group :assets do
   gem 'uglifier', '>= 1.0.3'
 end
 
-gem 'jquery-rails'
+gem 'jquery-rails', "2.3.0"
 gem 'jquery-ui-rails'
 
 #gem "linkeddata"
