[#53787189] switch to mysql on production

--- a/ZONE-watcher/Gemfile
+++ b/ZONE-watcher/Gemfile
@@ -7,8 +7,14 @@ gem "rake", "~> 10.0.4"
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
+group :production do
+  gem 'mysql'
+  gem 'yaml_db'
+end
 
+group :development do
+  gem 'sqlite3'
+end
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -50,3 +56,5 @@ gem "tag_it", "~> 0.0.1"
 gem "font-awesome-rails"
 
 gem 'rvm-capistrano'
+
+
