add the stathat plugin in order to have stats on annotation process

--- a/ZONE-watcher/config/config.yml.example
+++ b/ZONE-watcher/config/config.yml.example
@@ -4,6 +4,8 @@ virtuosoPassword: "dba"
 
 zopimId: "1AfdKtAnFnyhyiv9K09kidoNONtAmgvV"
 
+stathatId: "mail@example.com"
+
 devise:
   twitter:
     auth: "v"
