hide the svm plugin for now

--- a/ZONE-extractor/ZONE-extractor-start/pom.xml
+++ b/ZONE-extractor/ZONE-extractor-start/pom.xml
@@ -62,11 +62,13 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+    
+    <!-- Enable SVM here!
     <dependency>
       <groupId>org.zoneproject.extractor</groupId>
       <artifactId>ZONE-plugin-categorization_SVM</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
-    </dependency>
+    </dependency>-->
   </dependencies>
 </project>
