change the config file plugin used in order to be able to declare some arrays (now it's use in order to select plugins to use in the config file!

--- a/ZONE-extractor/config/zone.properties.sample
+++ b/ZONE-extractor/config/zone.properties.sample
@@ -15,3 +15,10 @@ Virtuoso-server-pass = dba
 #twitter OAuth 
 Twitter-OAuth-customer = OAuthCustomer
 Twitter-OAuth-customerKey = OAuthCustomerKey
+
+zone-plugins = org.zoneproject.extractor.twitterreader.App
+zone-plugins = org.zoneproject.extractor.rssreader.App
+zone-plugins = org.zoneproject.extractor.plugin.extractarticlescontent.App
+zone-plugins = org.zoneproject.extractor.plugin.opencalais.App
+zone-plugins = org.zoneproject.extractor.plugin.wikimeta.App
+zone-plugins = org.zoneproject.extractor.plugin.inseegeo.App
