--- a/ZONE-extractor/ZONE-plugin-OpenCalais/pom.xml
+++ b/ZONE-extractor/ZONE-plugin-OpenCalais/pom.xml
@@ -11,6 +11,38 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.zoneproject.extractor.plugin.opencalais.App</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+      <plugin>  
+        <groupId>org.codehaus.mojo</groupId>  
+        <artifactId>exec-maven-plugin</artifactId>  
+        <executions>  
+          <execution>  
+            <goals>  
+              <goal>java</goal>  
+            </goals>  
+          </execution>  
+        </executions>  
+        <configuration>  
+          <mainClass>org.zoneproject.extractor.plugin.opencalais.App</mainClass>
+        </configuration>  
+      </plugin>  
+    </plugins>
+  </build>
+  
   <dependencies>
     <dependency>
       <groupId>mx.bigdata.jcalais</groupId>
