--- a/ZONE-extractor/ZONE-utils/pom.xml
+++ b/ZONE-extractor/ZONE-utils/pom.xml
@@ -74,6 +74,12 @@
       <version>1.7.1</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>commons-configuration</groupId>
+      <artifactId>commons-configuration</artifactId>
+      <version>1.4</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
 </project>
