--- a/ZONE-extractor/ZONE-utils/pom.xml
+++ b/ZONE-extractor/ZONE-utils/pom.xml
@@ -43,11 +43,11 @@
       <artifactId>arq</artifactId>
       <version>2.8.6</version>
     </dependency>
-    <!--<dependency>
-      <groupId>org.apache.jena</groupId>
-      <artifactId>jena-arq</artifactId>
-      <version>2.9.3</version>
-    </dependency>-->
+    <dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>jena</artifactId>
+      <version>2.6.4</version>
+    </dependency>
     <dependency>
       <groupId>rome</groupId>
       <artifactId>rome</artifactId>
@@ -77,8 +77,18 @@
     <dependency>
       <groupId>commons-configuration</groupId>
       <artifactId>commons-configuration</artifactId>
-      <version>1.4</version>
+      <version>1.9</version>
       <type>jar</type>
+    </dependency>
+    <dependency>
+	<groupId>log4j</groupId>
+	<artifactId>log4j</artifactId>
+	<version>1.2.17</version>
+</dependency>
+    <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.1.3</version>
     </dependency>
   </dependencies>
 
