--- a/ZONE-watcher/config/config.yml.example
+++ b/ZONE-watcher/config/config.yml.example
@@ -2,6 +2,8 @@ virtuosoEndpoint: "http://localhost:8890/sparql/"
 virtuosoLogin: "dba"
 virtuosoPassword: "dba"
 
+defaultRequestId: "1"
+
 zopimId: "1AfdKtAnFnyhyiv9K09kidoNONtAmgvV"
 
 stathatId: "mail@example.com"
