changes on devise auth (need a new private key)

--- a/ZONE-watcher/config/config.yml.example
+++ b/ZONE-watcher/config/config.yml.example
@@ -9,6 +9,7 @@ zopimId: "1AfdKtAnFnyhyiv9K09kidoNONtAmgvV"
 stathatId: "mail@example.com"
 
 devise:
+  secretKey: 'YourSecretKey'
   twitter:
     auth: "v"
     pass: "v"
