[#41013711] add spotlight plugin to project

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 *.log
 .project
 /db/schema.rb
+/ZONE-extractor/ZONE-plugin-DBPedia-geo/target/
+/ZONE-extractor/ZONE-plugin-Spotlight/target/
+/ZONE-extractor/ZONE-plugin-LangDetect/target/
