--- a/ZONE-extractor/pom.xml
+++ b/ZONE-extractor/pom.xml
@@ -48,6 +48,7 @@
     <module>ZONE-TwitterReader</module>
     <!--<module>ZONE-plugin-DBPedia-geo</module>-->
     <module>ZONE-plugin-LangDetect</module>
+    <module>ZONE-plugin-Spotlight</module>
 
   </modules>
   
