first draft of tags categorization in ZONE-watcher

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /ZONE-extractor/ZONE-plugin-DBPedia-geo/target/
 /ZONE-extractor/ZONE-plugin-Spotlight/target/
 /ZONE-extractor/ZONE-plugin-LangDetect/target/
+/ZONE-extractor/ZONE-plugin-DBPedia/target/
