--- a/ZONE-watcher/Gemfile
+++ b/ZONE-watcher/Gemfile
@@ -8,7 +8,7 @@ gem "rake", "~> 10.0.4"
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 group :production do
-  gem 'mysql'
+  gem 'mysql2'
   gem 'yaml_db'
 end
 
